[tool.poetry]
name = "stackstorm-test-pack"
version = "1.0.0"
description = "Simple pack containing examples of sensor, rule, and action."
authors = ["Mark Mercado <mamercad@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
awxkit = "20.0.1"
eventlet = "^0.33.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
